feat(news): add complete swagger documentation
